admissioncontroller-config.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: admissioncontroller
webhooks:
  - name: admissioncontroller.dwpbank.io
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
    failurePolicy: Ignore
    clientConfig:
      service:
        name: admissioncontroller
        namespace: default
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURlVENDQW1FQ0NRQ0FzaXo2OGdSZi96QU5CZ2txaGtpRzl3MEJBUXNGQURCdU1Rc3dDUVlEVlFRR0V3SkUKUlRFU01CQUdBMVVFQnd3SlJuSmhibXRtZFhKME1RMHdDd1lEVlFRS0RBUmhZMjFsTVFzd0NRWURWUVFMREFKdgpaREVMTUFrR0ExVUVBd3dDWTJFeElqQWdCZ2txaGtpRzl3MEJDUUVXRTNsdmRYSmxiV0ZwYkVCbmJXRnBiQzVqCmIyMHdIaGNOTVRneE1qSTVNRGN4T0RFM1doY05NVGt4TWpJME1EY3hPREUzV2pDQmpqRUxNQWtHQTFVRUJoTUMKUkVVeEVqQVFCZ05WQkFjTUNVWnlZVzVyWm5WeWRERU5NQXNHQTFVRUNnd0VZV050WlRFTE1Ba0dBMVVFQ3d3QwpiM1V4S0RBbUJ [...]
